--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -5,6 +5,8 @@ Version: 0.1
 Date: 2009-12-06
 Author: Kevin M. Middleton <kmm@csusb.edu>
 Maintainer: Kevin M. Middleton <kmm@csusb.edu>
+Depends: R (>= 2.10)
+Suggests: ggplot2, gmodels
 Description: The abd package contains data sets and sample code for the book, The Analysis of Biological Data by Michael Whitlock and Dolph Schluter (2009; Roberts & Company Publishers).
 License: GPL-2
 LazyLoad: yes
