--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -5,8 +5,7 @@ Version: 0.1
 Date: 2010-02-25
 Author: Kevin M. Middleton <kmm@csusb.edu>
 Maintainer: Kevin M. Middleton <kmm@csusb.edu>
-Depends: R (>= 2.10), car, gmodels, lattice, nlme, PASWR, plyr, vcd
-Suggests: ggplot2
+Depends: R (>= 2.10), car, gmodels, lattice, nlme, PASWR, plyr, vcd, ggplot2
 Description: The abd package contains data sets and sample code for the book, The Analysis of Biological Data by Michael Whitlock and Dolph Schluter (2009; Roberts & Company Publishers).
 License: GPL-2
 LazyLoad: yes
