--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -6,7 +6,7 @@ Date: 2010-02-25
 Author: Kevin M. Middleton <kmm@csusb.edu>
 Maintainer: Kevin M. Middleton <kmm@csusb.edu>
 Depends: R (>= 2.10), nlme, plyr, ggplot2
-Suggests: boot, car, HH, vcd
+Suggests: boot, car, HH, lattice, vcd
 Description: The abd package contains data sets and sample code for the book, The Analysis of Biological Data by Michael Whitlock and Dolph Schluter (2009; Roberts & Company Publishers).
 License: GPL-2
 LazyLoad: yes
