--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: abd
 Type: Package
 Title: The Analysis of Biological Data
-Version: 0.1-1
-Date: 2010-12-20
+Version: 0.1-2
+Date: 2010-12-30
 Author: Kevin M. Middleton <kmm@csusb.edu>
 Maintainer: Kevin M. Middleton <kmm@csusb.edu>
-Depends: R (>= 2.10), nlme
-Suggests: boot, car, ggplot2, HH, lattice, plyr, vcd
+Depends: R (>= 2.10), nlme, lattice
+Suggests: boot, car, ggplot2, HH, plyr, vcd
 Description: The abd package contains data sets and sample code for the book, The Analysis of Biological Data by Michael Whitlock and Dolph Schluter (2009; Roberts & Company Publishers).
 License: GPL-2
 LazyLoad: yes
+LazyData: yes
 Encoding: UTF-8
