--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -4,7 +4,7 @@ Title: The Analysis of Biological Data
 Version: 0.1-16
 Date: 2011-02-12
 Author: Kevin M. Middleton <kmm@csusb.edu>, Randall Pruim <rpruim@calvin.edu>
-Maintainer: Kevin M. Middleton <kmm@csusb.edu>, Randall Pruim <rpruim@calvin.edu>
+Maintainer: Kevin M. Middleton <kmm@csusb.edu>
 Depends: R (>= 2.10), nlme, lattice, grid
 Suggests: boot, car, ggplot2, HH, plyr, vcd, Hmisc
 Description: The abd package contains data sets and sample code for The Analysis of Biological Data by Michael Whitlock and Dolph Schluter (2009; Roberts & Company Publishers).
