--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -6,7 +6,7 @@ Date: 2011-8-1
 Author: Kevin M. Middleton <kmm@csusb.edu>, Randall Pruim <rpruim@calvin.edu>
 Maintainer: Kevin M. Middleton <kmm@csusb.edu>
 Depends: R (>= 2.10), nlme, lattice, grid
-Suggests: boot, car, ggplot2, HH, plyr, vcd, Hmisc
+Suggests: boot, car, ggplot2, plyr, HH, vcd, Hmisc
 Description: The abd package contains data sets and sample code for The Analysis of Biological Data by Michael Whitlock and Dolph Schluter (2009; Roberts & Company Publishers).
 License: GPL-2
 LazyLoad: yes
